--- a/src/views/profile/style.css
+++ b/src/views/profile/style.css
@@ -54,7 +54,6 @@
   width: 100%;
   border: 1px solid #454545;
   overflow-y: auto;
-  height: 50%;
   max-height: calc(100vh - 570px);
   padding: 12px;
   font-size: 12px;
